--- a/index.html
+++ b/index.html
@@ -1,86 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="author" content="Mohamed Fadl" />
-
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-
-    <title>RegExp Form Validation</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Form Validator</title>
   </head>
   <body>
-    <div class="container py-3">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <h1>Form Validation</h1>
-
-          <form class="form-validate" novalidate>
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input class="form-control" type="text" id="name" />
-              <div class="invalid-feedback">
-                Enter valid name, Name must be between 3 and 16 characters
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input class="form-control" type="email" id="email" />
-              <div class="invalid-feedback">
-                Enter a valid email
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="phone">Phone Number</label>
-              <input class="form-control" type="text" id="phone" />
-              <div class="invalid-feedback">
-                Enter a valid phone
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="zip">Zip Code</label>
-              <input class="form-control" type="text" id="zip" />
-              <div class="invalid-feedback">
-                Enter a valid Zip Code
-              </div>
-            </div>
-            <input
-              type="submit"
-              value="Submit"
-              class="btn btn-primary btn-block"
-            />
-          </form>
+    <div class="container">
+      <form id="form" class="form">
+        <h2>Form Validator</h2>
+        <div class="form-control">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" placeholder="Enter full name" />
+          <small>Error message</small>
         </div>
-      </div>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="phone">Phone</label>
+          <input
+            type="text"
+            id="phone"
+            placeholder="Enter Phone Number"
+          />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter password" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password2">Confirm Password</label>
+          <input
+            type="password"
+            id="password2"
+            placeholder="Enter password again"
+          />
+          <small>Error message</small>
+        </div>
+        
+        <button type="submit">Submit</button>
+      </form>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
     <script src="app.js"></script>
   </body>
 </html>
