--- a/index.html
+++ b/index.html
@@ -13,17 +13,33 @@
         <h2>Form Validator</h2>
         <div class="form-control">
           <label for="name">Full Name</label>
-          <input type="text" id="name" placeholder="Enter full name" />
+          <input
+            type="text"
+            id="name"
+            placeholder="Enter full name"
+            dir="auto"
+            autocomplete="name"
+          />
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="username">Username</label>
-          <input type="text" id="username" placeholder="Enter username" />
+          <input
+            type="text"
+            id="username"
+            placeholder="Enter username"
+            autocomplete="username"
+          />
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Enter email" />
+          <input
+            type="text"
+            id="email"
+            placeholder="Enter email"
+            autocomplete="email"
+          />
           <small>Error message</small>
         </div>
         <div class="form-control">
@@ -32,12 +48,18 @@
             type="text"
             id="phone"
             placeholder="Enter Phone Number"
+            autocomplete="tel"
           />
           <small>Error message</small>
         </div>
         <div class="form-control">
           <label for="password">Password</label>
-          <input type="password" id="password" placeholder="Enter password" />
+          <input
+            type="password"
+            id="password"
+            placeholder="Enter password"
+            autocomplete="new-password"
+          />
           <small>Error message</small>
         </div>
         <div class="form-control">
@@ -46,10 +68,11 @@
             type="password"
             id="password2"
             placeholder="Enter password again"
+            autocomplete="new-password"
           />
           <small>Error message</small>
         </div>
-        
+
         <button type="submit">Submit</button>
       </form>
     </div>
